--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
-﻿fastapi==0.115.6
+﻿# Python >= 3.10 required
+fastapi==0.115.6
 uvicorn[standard]==0.32.1
 pydantic==2.9.2
 pydantic-settings==2.6.1
