refactor: rename VITE_API_BASE to VITE_BACKEND_URL

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
 # Frontend дээр API key байх ёсгүй.
 # Зөвхөн backend API URL (локал)
-VITE_API_BASE=http://localhost:8000
+VITE_BACKEND_URL=http://localhost:8000
