--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
   "env": {
-    "VITE_API_BASE": "@vite-api-base"
+    "VITE_BACKEND_URL": "https://systemdynamics.onrender.com"
   }
 }
